# bcalcballistics

./: .gitignore  README.md  angles.py  atmosphere.py  ballistics.py  bcalcext.desktop  bdc.py  config.py  constants.py  datacartcal.csv  dataentry.py  dataformulas.py  datagameclass.csv  dataholder.py  dataholder2.py  dataoutputgui.py  drag.py  example.py  holdover.py  points.py  pyproject.toml  requirements.txt  startprogram.py  utils.py  windage.py
docs/: index.html
